fix: make repository menu not overflow with JS off (#11614)
Closes #11400

Overflow is handled by javascript to show a button instead of horizontally scrolling, this is not the case when javascript is disabled. Add CSS to handle overflow, does not interfere with the javascript.

## Testing
1. Go to any repository.
2. Turn off javascript.
3. Make viewport width small.
4. Observe that repository menu under the repository header doesn't overflow.

Reviewed-on: https://codeberg.org/forgejo/forgejo/pulls/11614
Co-committed-by: Artyom Bologov <git@aartaka.me>

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -985,6 +985,7 @@ strong.attention-caution, svg.attention-caution {
 overflow-menu {
   border-bottom: 1px solid var(--color-secondary) !important;
   display: flex;
+  overflow-x: auto;
 }
 
 overflow-menu .overflow-menu-items {
